Some small scripted tests improvements
Changes:
- removed `-XX:MaxPermSize` from `scriptedLaunchOpts` (not used in Java 1.8)
- replaced `%%` with `%` in `plugins.sbt` files in all test projects